・xaml参考追加 ・efcore整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -7,6 +7,59 @@
 
 ---
 
+## DataGridからElementNameでバインドする
+
+FlexGridのカラムから上位の階層にあるコントロール名を指定していてバインドする場合、`ElementName`の指定だけでは無理。  
+`ElementName`の指定ではあるが、階層構造は影響する模様。  
+
+かといって、`FindAncestor`での探索も無理だった。  
+`x:Reference`を使用するのが正解であった。  
+
+>`ElementName`はビジュアルツリーから探索するため、ツリー外にいる`ContextMenu`や`DataGridColumn`からは取得できません。  
+>`x:Reference`を使用してください。  
+>[WPF Bindingについて](https://teratail.com/questions/237500)  
+
+``` xml
+<!-- 上位のコントロールにあるチェックボックス -->
+<CheckBox
+    x:Name="FeeCheck"
+    Margin="10,0,0,0"
+    Padding="5,0,0,0"
+    VerticalContentAlignment="Center"
+    Content="料金のチェックを行う"
+    IsChecked="{Binding IsCheckFee, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+    IsTabStop="False" />
+
+<!-- DataGrid -->
+<ctrl:CustomFlexGrid.Columns>
+    <c1:Column
+        Width="40"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        AllowSorting="False"
+        ColumnName="IsSelected"
+        HeaderHorizontalAlignment="Center"
+        HeaderVerticalAlignment="Center">
+        <c1:Column.CellTemplate>
+            <DataTemplate>
+                <!-- CellTemplateのCheckBoxから上位コントロールのチェックボックスをバインドする -->
+                <!-- Source={x:Reference <コントロール名>} -->
+                <CheckBox
+                    Margin="10,0,0,0"
+                    Padding="5,0,0,0"
+                    VerticalContentAlignment="Center"
+                    IsChecked="{Binding IsChecked, Source={x:Reference FeeCheck}, Mode=OneWay}"
+                    IsTabStop="False" />
+            </DataTemplate>
+        </c1:Column.CellTemplate>
+    </c1:Column>
+</ctrl:CustomFlexGrid.Columns>
+```
+
+[WPF Bindingについて](https://teratail.com/questions/237500)  
+
+---
+
 ## タスクのキャンセル
 
 cancellationtokensource
