・flexgridまとめ ・t4テンプレートまとめ ・4，11、9途中 ・整理

--- a/GoodCode,BadCode/4.不変の活用.md
+++ b/GoodCode,BadCode/4.不変の活用.md
@@ -1,1 +1,596 @@
 # 4. 不変の活用 安定動作を構築する
+
+変数の値を変更するなど、状態変更できることを**可変(ミュータブル)**と呼ぶ。  
+一方、状態変更できないことを**不変(イミュータブル)**と呼ぶ。  
+
+可変と不変を適切に設計しないと挙動の予測が困難になる。  
+「この値になるはず」と意図して実装したのに、意図しない違う値に変わっていたという事態が発生してしまう。  
+
+変更は最小限にする設計が重要となる。  
+そこで、不変が大きな役割を果たす。  
+不変は、近年のプログラミングスタイルで標準的な流れになりつつある。  
+
+---
+---
+
+## 4.1 再代入
+
+変数に再度値を代入することを**再代入**、または**破壊的代入**と呼ぶ。  
+再代入は変数の意味が変わり、推測を困難にする。  
+いつ変更されたのか追うのが難しくなる。  
+
+``` java
+// リスト4.1
+// 変数tmpへの度重なる再代入
+
+int damage() {
+    // メンバーの腕力と武器性能が基本攻撃力
+    int tmp = member.power() + member.weaponAttack();
+    // メンバーのスピードで攻撃力を補正
+    tmp = (int)(tmp * (1f + member.speed() / 100f));
+    // 攻撃力から敵の防御力を差し引いたのがダメージ
+    tmp = tmp - (int)(enemy.defence / 2);
+    // ダメージ値が負数にならないよう補正
+    tmp = Math.max(0, tmp);
+
+    return tmp;
+}
+```
+
+ゲームを例に説明する。  
+リスト4.1ではダメージ計算をしている。  
+
+計算のために、途中で様々なパラメーターの加算や補正をしている。  
+これらの計算に、ローカル変数tmpが使いまわされている。  
+
+変数tmpは、基本攻撃力、補正値、ダメージ値、、、と、代入される値の意味がコロコロ変わっている。  
+途中で意味が変わると読み手が混乱する。  
+誤解してバグを埋め込む可能性もあるため、再代入は避けるべき。  
+変数の上書きをせず、別の変数を用意することで再代入を防げる。  
+
+---
+
+### 4.1.1 不変にして再代入を防ぐ
+
+再代入を機械的に防ぐ、良い方法がある。  
+ローカル変数にfinal修飾子を付けるのだ。  
+finalを付与すると不変になり、変更できなくなる。  
+finalの変数に再代入しようとすると、コンパイルエラーとなる。  
+
+``` java
+// リスト4.3
+// 個別の不変なローカル変数に変更
+
+int damage() {
+    final int basicAttackPower = member.power() + member.weaponAttack();
+    final int finalAttackPower = (int)(tmp * (1f + member.speed() / 100f));
+    final int reduction = (int)(enemy.defence / 2);
+    final int damage = Math.max(0, finalAttackPower - reduction);
+    return tmp;
+}
+```
+
+---
+
+### 4.1.2 引数も不変にする
+
+引数の変更も同様に不変とする。  
+値の意味が変わってしまう。  
+読み手が混乱し、バグの原因となる。  
+
+``` java
+// リスト4.4
+// 引数productPriceへ再代入している
+
+int addPrice(int productPrice) {
+    productPrice = totalPrice + productPrice;
+    if (MAX_TOTAL_PRICE < productPrice) {
+        throw new IllegalArgumentException("購入金額の上限を超えています。");
+    }
+}
+```
+
+再代入を防ぐため、引数にもfinalを付与しよう。  
+引数を変更したい場合は、不変なローカル変数を用意し、そのローカル変数に変更値を代入する実装にする。  
+
+``` java
+// リスト4.5
+// 引数にfinalを付与して不変にする
+
+int addPrice(final int productPrice) {
+    final int incresedTotalPrice = totalPrice + productPrice;
+    if (MAX_TOTAL_PRICE < incresedTotalPrice) {
+        throw new IllegalArgumentException("購入金額の上限を超えています。");
+    }
+}
+```
+
+---
+---
+
+## 4.2 可変がもたらす意図せぬ影響
+
+インスタンスが可変だと、意図しない影響が発生しやすくなる。  
+コードを変更した時、思わぬ箇所で状態が変わり、予測と反する挙動になってしまうケースがある。  
+意図しない影響が生じるケースを2例紹介する。  
+そのうえで、どう改善すればよいか設計方法を解説する。  
+
+---
+
+### 4.2.1 ケース1 可変インスタンスの使いまわし
+
+ゲームを例に説明する。  
+武器の攻撃力AttackPowerクラスを実装した。  
+攻撃力の値を格納するインスタンス変数valueにはfinal修飾子が付いておらず、可変である。  
+
+``` java
+// リスト4.6
+// 攻撃力を表現するクラス
+
+class AttackPower {
+    static final int MIN = 0;
+    int value; // finalが付いていないので可変
+
+    AttackPower(int value) {
+        if (value < MIN) {
+            throw new IllegalArgumentException();
+        }
+        this.value = value;
+    }
+}
+```
+
+武器を表現するWeaponクラスは、AttackPowerをインスタンス変数として持つ構造。  
+
+``` java
+// リスト4.7
+// 武器を表現するクラス
+
+class Weapon {
+    final AttackPower attackPower;
+
+    Weapon(AttackPower attackPower) {
+        this.attackPower = attackPower;
+    }
+}
+```
+
+最初の仕様では、武器ごとの攻撃力は固定であった。
+攻撃力が同じ場合は、AttackPowerのインスタンスを使いまわしているケースがあった。  
+
+``` java
+// リスト4.8
+// AttackPowerインスタンスを使いまわしている
+
+AttackPower attackPower = new AttackPower(20);
+
+Weapon weaponA = new Weapon(attackPower);
+Weapon weaponB = new Weapon(attackPower);
+```
+
+その後、「武器それぞれで攻撃力を強化できる仕様に変えよう」という話になった。  
+ところが、ある武器の攻撃力を強化すると、他の武器も強化されてしまうバグが発生した。  
+
+``` java
+// リスト4.9
+// 使いまわしている攻撃力を変更すると?
+
+AttackPower attackPower = new AttackPower(20);
+
+Weapon weaponA = new Weapon(attackPower);
+Weapon weaponB = new Weapon(attackPower);
+
+weaponA.attackPower.value = 25;
+
+
+// リスト4.10
+// 別の武器の攻撃力まで変化してしまう
+
+// weapon A attack Power : 25
+// weapon B attack Power : 25
+```
+
+このように、可変なインスタンス変数は予期せぬ動作を招きやすくしてしまう。  
+こうした事態を防ぐには、インスタンスの使いまわしをやめることだ。  
+AttackPowerインスタンスを個別に生成し、使いまわさないロジックに変更する。  
+そうすれば、一方の攻撃力が変更しても、もう一方は変化しなくなる。  
+
+``` java
+// リスト4.11
+// 攻撃力のインスタンスを個別に生成する
+
+AttackPower attackPowerA = new AttackPower(20);
+AttackPower attackPowerB = new AttackPower(20);
+
+Weapon weaponA = new Weapon(attackPowerA);
+Weapon weaponB = new Weapon(attackPowerB);
+
+weaponA.attackPower.value += 5;
+
+// weapon A attack Power : 25
+// weapon B attack Power : 20
+```
+
+---
+
+### 4.2.2 ケース2 関数による可変インスタンスの操作
+
+予期せぬ動作は関数(メソッド)によっても引き起こされる。  
+AttackPowerクラスに、攻撃力を変化させるreinForceメソッドとdisableメソッドが追加された。  
+
+ある日を境日、攻撃力が0になることが度々発生するようになってしまった。  
+
+``` java
+// リスト4.13
+// 攻撃力を変化させるメソッドを追加
+
+class AttackPower {
+    static final int MIN = 0;
+    int value; // finalが付いていないので可変
+
+    AttackPower(int value) {
+        if (value < MIN) {
+            throw new IllegalArgumentException();
+        }
+        this.value = value;
+    }
+
+    // 攻撃力を強化する
+    // @param increment 攻撃力の増分
+    void reinForce(int increment) {
+        value += increment;
+    }
+
+    // 無力化する
+    void disable() {
+        value = MIN;
+    }
+}
+
+// リスト 4.14
+// 攻撃力を強化する処理
+
+AttackPower attackPower = new AttackPower(20);
+// 中略
+attackPower.reinForce(15);
+System.out.println("attack power : " + attackPower.value);
+
+// リスト4.15
+// 想定通りに攻撃力強化
+
+// attack power : 35
+
+// リスト4.16
+// ある日を境に、度々、攻撃力が0になるようになった
+
+// attack power : 0
+```
+
+原因を調査したところ、AttackPowerのインスタンスが別のスレッドで使いまわされていることが分かった。  
+リスト4.17のスレッドでは、攻撃力を0にする`AttackPower.disableメソッド`が呼び出されていた。  
+
+AttackPowerのdisableメソッドやreinForceメソッドは、構造的な問題を抱えている。  
+それは**副作用**だ。
+
+---
+
+### 4.2.3 副作用のデメリット
+
+**副作用**とは、関数が引数を受け取り、戻り値を返す以外に、外部の状態(変数など)を変更することを言う。  
+
+関数(メソッド)には、主作用と副作用がある。  
+
+- 主作用 : 関数(メソッド)が引数を受け取り、値を返すこと。  
+- 副作用 : 主作用以外に状態変更する事。  
+
+ここでの状態変更とは、関数の外にある状態の変更のことを言う。  
+例えば、以下を指す。  
+
+- インスタンス変数の変更  
+- グローバル変数の変更  
+- 引数の変更  
+- ファイルの読み書きなどのI/O操作  
+
+別スレッドでのAttackPower.disableの呼び出しが、別の個所に影響を及ぼしている。  
+AttackPower.disableやAttackPower.reinForceを実行するたびに、インスタンス変数AttackPower.valueの値はコロコロ変わる。  
+同じ結果を得るには同じ手順で実行するなど、処理の実行順に依存してしまう。  
+結果の予測が難しく保守が大変になる。  
+
+インスタンス変数だけでなく、グローバル変数や引数の変更でも同様の弊害が生じる。  
+ファイルの読み書きなどのI/O操作も状態の変更といえる。  
+単にデータの置き場所がメモリ上の変数から、外部デバイスに置き換わっただけだから。  
+また、読みだした時点でファイルが必ず存在するとは限らないし、内容もどこかで書き変わっているかもしれない。  
+常に同じ結果が得られない。  
+
+なお、関数内で宣言したローカル変数の変更は副作用とは言えない。  
+関数の外部の影響を与えないためである。  
+
+---
+
+### 4.2.4 関数の影響範囲を限定する
+
+副作用のある関数は、影響範囲がどこまで及んでいるのか推測が困難。  
+従って予期しない動作を防ぐには、関数が影響を受ける・与える範囲を限定するのが確実となる。  
+
+関数が次の項目を満たすことを前提に設計を行う。  
+
+- データ(状態)を引数で受け取る。  
+- 状態を変更しない。  
+- 値は関数の戻り値として返す。  
+
+引数で状態を受け取り、状態変更せず、値を返すだけの関数が理想となる。  
+この前提を読んで、「メソッド内でインスタンス変数を触すこと自体がよくないのでは？」と感じた方がいるかもしれない。  
+しかし、そうではない。  
+インスタンス変数を不変にすることで影響が伝搬しなくなり、予期せぬ動作の問題を回避できる。  
+オブジェクト指向プログラミング言語では、副作用のない関数を厳密に作りこむスタイルよりも、クラスのスコープ内で影響を閉じ込めるスタイルが一般的となる。  
+
+※副作用と関連する概念に、参照透過性という考え方がある。  
+同じ条件(引数)を与えたとき、実行結果が常に等しくなるという性質。  
+
+---
+
+### 4.2.5 不変にして予期せぬ動作を防ぐ
+
+予期せぬ動作を防ぐようAttackPowerクラスを改善する。  
+不変による堅牢性を活かした構造に設計し直す。  
+
+インスタンス変数valueが可変であることが、副作用の余地を与えている。  
+「注意してコードを書いているから可変でも大丈夫だ」と考えるのはさすがにバカ。  
+**仕様変更時に意図せず副作用のある関数が作りこまれてしまい、予期しない動作を招いていしまう、ということがよくある。**  
+コード量が増大するほど、この傾向は顕著になる。  
+
+副作用の余地を残さぬよう、インスタンス変数valueにfinal修飾子を付与して不変にする。  
+不変にすると当然だが、変更できなくなる。  
+変更するには、変更値を持った新しいインスタンスを生成する形にする。  
+reinForceメソッドやdisableメソッドを、新しい値を持ったAttackPowerインスタンスを生成し、返す作りにする。  
+
+``` java
+// リスト4.18
+// 不変で堅牢になったAttackPowerクラス
+
+class AttackPower {
+    static final int MIN = 0;
+    final int value; // finalで不変にする
+
+    AttackPower(int value) {
+        if (value < MIN) {
+            throw new IllegalArgumentException();
+        }
+        this.value = value;
+    }
+
+    // 攻撃力を強化する
+    // @param increment 攻撃力の増分
+    // @return 強化された攻撃力
+    void reinForce(final AttackPower increment) {
+        return new AttackPower(this.value + increment.value);
+    }
+
+    // 無力化する
+    // @return 無力化された攻撃力
+    void disable() {
+        return new AttackPower(MIN);
+    }
+}
+```
+
+AttackPowerを呼び出しているコードも変更する。  
+インスタンス変数AttackPower.valueは不変なので、攻撃力を変更するにはreinForceやdisableメソッドを呼び出し、変更後の値を持つAttackPowerインスタンスを生成する。  
+attackPowerが使いまわされても、攻撃力の変更には新たにインスタンス生成しなければならないため、変化前、変化後の攻撃力はお互いが影響を受けない。  
+
+``` java
+// リスト4.19
+// 影響範囲が閉じた攻撃力強化
+
+final AttackPower = attackPower = new AttackPower(20);
+// 中略
+final AttackPower reinForced = attackPower.reinForce(new AttackPower(15));
+// 15になっている。
+
+
+// リスト4.20
+// 別のインスタンスを生成するので影響なし
+final AttackPower disable = attackPower.disable();
+```
+
+ついでに、Weaponクラスも不変を活用した作りにする。  
+武器を強化するreinForceメソッドを追加する。  
+攻撃力を強化したWeaponインスタンスを返すメソッドになる。  
+
+``` java
+// リスト4.21
+// 武器を表現するクラス(改良版)
+
+class Weapon {
+    final AttackPower attackPower;
+
+    Weapon(final AttackPower attackPower) {
+        this.attackPower = attackPower;
+    }
+
+    // 武器を強化する
+    // @param increment 攻撃力の増分
+    // @return 強化した武器
+    Weapon reinForce(final AttackPower increment) {
+        final AttackPower reinForced = attackPower.reinForce(increment);
+        return new Weapon(reinForced);
+    }
+}
+```
+
+AttackPowerとWeaponの改善に伴い、リスト4.11は4.22になる。  
+
+``` java
+// リスト4.22
+// AttackPowerとWeaponの利用(改良版)
+
+AttackPower attackPowerA = new AttackPower(20);
+AttackPower attackPowerB = new AttackPower(20);
+
+Weapon weaponA = new Weapon(attackPowerA);
+Weapon weaponB = new Weapon(attackPowerB);
+
+// weaponA.attackPower.value += 5;
+final AttackPoint increment = new AttackPower(5);
+final Weapon reinForcedWeaponA = weaponA.reinForce(increment);
+
+
+// リスト4.23
+// それぞれが影響を受けない
+
+// WeaponA attack power : 20
+// reinForcedWeaponA attack power : 25
+// WeaponB attack power : 20
+```
+
+---
+---
+
+## 4.3 不変と可変の取り扱い方針
+
+実際の開発では、不変と可変をどのように扱っていけばいいのか。  
+
+---
+
+### 4.3.1 デフォルトは不変に
+
+不変にすると以下のメリットが得られる。  
+
+- 変数の意味が変化しなくなるため、混乱が抑えられる。  
+- 挙動が安定し、結果を予測しやすくなる。  
+- コードの影響範囲が限定的になり、保守が容易になる。  
+
+したがって、標準的には不変で設計するとよい。  
+間違った使い方ができない構造にすることで、**フールプルーフ**の立場を採用する。  
+
+Javaの場合、不変にするには変数宣言時にfinal修飾子が必要なので、コードは多少冗長にはなる。  
+それでも、不変のメリットが上回る。  
+KotlinやScalaは、`val句`(不変)か`var句`(可変)を選択する仕様となっている。  
+JavaScriptにも定数宣言の`const`が導入されている。  
+これらの言語に不変を用いることの冗長さはない。  
+
+Rustに至っては、不変がデフォルトとなっている。  
+可変にするには、`mut句`を付け加える必要がある。  
+
+近年登場したプログラミング言語は不変を導入しやすいものになっている。  
+それほどに不変の重要性が増しているということではなかろうか。  
+
+---
+
+### 4.3.2 どんなとき可変にしてよいか
+
+基本的には不変が望ましいが、不変がふさわしくない場合もある。  
+それはパフォーマンスに問題が生じるケースである。  
+例えば、大量のデータの高速処理や画像処理、リソース制限の厳しい組み込みソフトウェアなどで可変が必要なことがある。  
+
+不変にした場合、値を変更するにはインスタンスを生成しなければならないため、値の変更が膨大に発生する場合は、インスタンス生成に時間がかかるといったことが原因でパフォーマンス要件を満たせない場合がある。  
+そのような場合は可変にするとよいだろう。  
+
+パフォーマンス以外で可変にしてよいのは、スコープが局所的なケースとなる。  
+ループカウンタなど、ループ処理のスコープでしか使われないことが確実なローカル変数ならば、可変にしてよいと考える。  
+
+---
+
+### 4.3.3 正しく状態変更するメソッドを設計する
+
+インスタンス変数を可変にする場合は、メソッドの作りに注意が必要となる。  
+リスト4.24はゲームにおけるヒットポイント、およびメンバーを表現したクラスとなる。  
+
+次の仕様とする。  
+
+- ヒットポイントは0以上。  
+- ヒットポイントが0になった場合、死亡状態にする。  
+
+Member.damageメソッドはこの仕様を満たせるだろうか。  
+
+``` java
+// リスト4.24
+// 正しく動作するのか怪しげなロジック
+
+class HitPoint {
+    int amount;
+}
+
+class Member {
+    final HitPoint hitPoint;
+    final States states;
+    // 中略
+
+    // ダメージを受ける
+    // @param damageAmount ダメージ量
+    void damage(int damageAmount) {
+        hitPoint.amount -= damageAmount;
+    }
+}
+```
+
+Member.damageのロジックでは、HitPoint.amountがマイナスになってしまうことがある。  
+また、ヒットポイントが0になっても死亡状態に変化されていない。  
+仕様を満たしているとは言えない。  
+
+可変にする場合は、正しく状態変更できる作りにすべし。  
+状態変更を発生させるメソッドを**ミューテーター**と呼ぶ。  
+正しい状態変更のみ発生させるミューテーターへ改良する。  
+
+``` java
+// リスト4.25 
+// 可変では必ず正しい状態変更のみ発生するよう設計する事
+
+class HitPoint {
+    private static final int MIN = 0;
+    int amount;
+
+    HitPoint(final int amount) {
+        if (amount < MIN) {
+            throw new IllegalArgumentException();
+        }
+        this.amount = amount;
+    }
+
+    // ダメージを受ける
+    // @param damageAmount ダメージ量
+    void damage(final int damageAmount) {
+        final int nextAmount = amount - damageAmount;
+        amount = Math.max(MIN, nextAmount);
+    }
+
+    // @return ヒットポイントがゼロであればtrue
+    boolean isZero() {
+        return amount == MIN;
+    }
+}
+
+class Member {
+    final HitPoint hitPoint;
+    final States states;
+    // 中略
+
+    // ダメージを受ける
+    // @param damageAmount ダメージ量
+    void damage(final int damageAmount) {
+        hitPoint.damage(damageAmount);
+        if (hitPoint.isZero()) {
+            states.add(StateType.dead);
+        }
+    }
+}
+```
+
+---
+
+### 4.3.4 コード外とのやり取りは局所化する
+
+どれだけ慎重に、不変を中心としたコードを設計しても、コード外とのやり取りには注意が必要となる。  
+
+ファイルの読み書きなどのI/O操作は、コードの外の状態に依存する。  
+Webアプリケーションでは、データべ須の操作はほとんど必須となる。  
+
+以下に注意深く処理を書いても、これらはコードの外の状態なので、その動作を完全にはコントロールできないものである。  
+例えばファイルの内容は、別のシステムによって書き変わりうる。  
+あまり考えずに、外の状態に依存するコードを書くと、コードの見通しが悪くなり、挙動の予測が困難になる。  
+
+近年、影響を最小限に抑えるために、コード外とのやりとりを局所化するテクニックが人気である。  
+局所化の方法には、例えばリポジトリパターンがある。  
+リポジトリパターンはデータベースなど、データソースの制御ロジック、もしくはデータベースの永続化処理をカプセル化するデザインパターンである。  
+リポジトリパターンのクラス内にデータベース関連のロジックが隔離されるため、アプリケーションロジックがデータベース関連のロジックで汚れずに済む。  
+リポジトリパターンは、集約(整合性維持が必要な複数のクラスの集合体)と呼ばれる単位で読み書きするよう設計するのが一般的となる。  
