--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -20,14 +20,14 @@ FlexGridのカラムから上位の階層にあるコントロール名を指定
 >[WPF Bindingについて](https://teratail.com/questions/237500)  
 
 ``` xml
-<!-- 上位のコントロールにあるチェックボックス -->
+<!-- 上位のtreeにあるチェックボックス -->
 <CheckBox
     x:Name="FeeCheck"
     Margin="10,0,0,0"
     Padding="5,0,0,0"
     VerticalContentAlignment="Center"
     Content="料金のチェックを行う"
-    IsChecked="{Binding IsCheckFee, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+    IsChecked="{Binding IsCheckFee, Mode=TwoWay}"
     IsTabStop="False" />
 
 <!-- DataGrid -->
