・マイグレーション ・整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -90,10 +90,10 @@ CancellationTokenは、アクションのグラフ全体を一度にキャンセ
 
 ## C#のVSCodeのデバッグでコンソールの入力を有効にする方法
 
-`.vscode`ディレクトリ配下にある`launch.json`の`"console":"internalConsole"`の部分を
-`"console":"externalTerminal"`に書き換える。  
+`.vscode`ディレクトリ配下にある`launch.json`の`"console":"internalConsole"`の部分を`"console":"externalTerminal"`に書き換える。  
 
 [Visual Studio Code で Console.ReadLineを使う方法](https://qiita.com/link_to_someone/items/2b7cb8747a34165b8c8e)  
+
 c# vscode debug console readline  
 
 ---
