・参考追加 ・整理

--- a/C#_WPF/メモ.md
+++ b/C#_WPF/メモ.md
@@ -125,16 +125,25 @@ StaticResourceは性質上、使う時より上で定義していないと使え
 ## ViewModelからコントロールのメソッドを実行する方法
 
 C1MultiSelectコントロールの実装中において、選択状態を初期化をしたいなーって時にUnselectAllというメソッドが用意されているのは分かったので、それを直接呼び出せないか調べていたら、CallMethodActionという、まさしくな仕組みがあったのでまとめ。  
-[ビューモデルからビューのメソッドを呼ぶ](https://qiita.com/tera1707/items/d184c85d0c181e6563ea)  
 
 ``` XML : View
 <i:Interaction.Triggers>
     <l:InteractionMessageTrigger MessageKey="SubjectLargeTypeListUnselectAll" Messenger="{Binding Messenger}">
         <!-- C1MultiSelectというコントロールにはUnselectAllという選択状態を全て解除するメソッドが用意されており、それをXAML上から直接呼び出せる -->
-        <!-- 呼び出しはいつものアレ→Messenger.Raise(new InteractionMessage("SubjectLargeTypeListUnselectAll")); -->
         <i:CallMethodAction MethodName="UnselectAll" />
+    </l:InteractionMessageTrigger>
+</i:Interaction.Triggers>
+```
 
-        <!-- FlexGrid関連にもまとめたが、自分自身のプロパティが持つメソッドをたどって実行させることもできる -->
+``` cs
+Messenger.Raise(new InteractionMessage("SubjectLargeTypeListUnselectAll"));
+```
+
+FlexGrid関連にもまとめたが、自分自身のプロパティが持つメソッドをたどって実行させることもできる
+
+``` xml
+<i:Interaction.Triggers>
+    <l:InteractionMessageTrigger MessageKey="FlexGridClearSortAction" Messenger="{Binding Messenger}">
         <i:CallMethodAction MethodName="Clear" TargetObject="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ctrl:CustomFlexGrid}}, Path=CollectionView.SortDescriptions}" />
     </l:InteractionMessageTrigger>
 </i:Interaction.Triggers>
@@ -150,6 +159,8 @@ CallMethodActionはWPF側が用意しているものらしい。
     MethodParameter="{Binding SelectedIndex}"
     MethodTarget="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type c1:C1MultiSelect}}, Path=ListBox.SelectedItems}" />
 ```
+
+[ビューモデルからビューのメソッドを呼ぶ](https://qiita.com/tera1707/items/d184c85d0c181e6563ea)  
 
 ---
 
