--- a/GoodCode,BadCode/16.設計を妨げる開発プロセスとの戦い.md
+++ b/GoodCode,BadCode/16.設計を妨げる開発プロセスとの戦い.md
@@ -385,7 +385,7 @@ PullRequest作成時のテンプレートテキストには、レビュー観点
 技術的な正しさや有用性よりも、まずは共に働く、コードを書く仲間を尊重すること。  
 敬意と礼儀を意識しながら指摘することが、コード品質を高める最短経路。  
 
-GoogleのChromiumプロジェクトのレビュー方針、「経緯に満ちたコードレビュー」は以下の通り。  
+GoogleのChromiumプロジェクトのレビュー方針、「敬意に満ちたコードレビュー」は以下の通り。  
 この方針は、すべきことといけないことを決めている。  
 
 |すべきこと|解説|
