--- a/GoodCode,BadCode/9.設計の健全性を損なう様々な要因.md
+++ b/GoodCode,BadCode/9.設計の健全性を損なう様々な要因.md
@@ -492,6 +492,43 @@ catch (Exception e) {
 
 ## 9.8 設計秩序を破壊するメタプログラミング
 
+プログラム実行時に、そのプログラムの構造自体を制御するプログラミングをメタプログラミングと呼ぶ。  
+メタプログラミング技術の一つとして、C#やJavaではクラス構造を読み書きできる機構としてリフレクションが用意されている。  
+
+メタプログラミングは、通常のプログラミングではできないアクセスを可能にするなど、裏技的なことができる。  
+故に一部では黒魔術などと呼ばれている。  
+しかし、用法や意図を理解せずに使うと、設計が台無しになってしまう危険性がある。  
+
+---
+
+### 9.8.1 リフレクションによるクラス構造および値の変更
+
+以下のプログラムは、ゲームにおいてメンバーのレベルを表現する値オブジェクトのLevelクラスとなる。  
+
+``` java
+// リスト9.16
+// メンバーのレベルを表現するクラス
+
+class Level {
+    private static final int MIN = 1;
+    private static final int MAX = 99;
+    final int value;
+
+    private Level (final int value) {
+        if (value < MIN || MAX < value) {
+            throw new IllegalArgumentException();
+        }
+        this.value = value;
+    }
+
+    // 初期レベルを返す
+    static Level initialize() {
+        return new Level(MIN);
+    }
+}
+
+```
+
 ---
 ---
 
