コンソール系参考追加

--- a/ディレクトリ構成図記号.md
+++ b/ディレクトリ構成図記号.md
@@ -23,6 +23,24 @@
 ---
 
 ``` txt
+DbUpMigration
+├─.config
+├─.github
+├─.vscode
+├─Script
+│  ├─Dat
+│  │ ├─yyyymmddhhMMss_Fix255_○○Table_CreateTable.sql
+│  │ └─yyyymmddhhMMss_Fix351_○○Table_AlterColumn.sql
+│  └─Sys
+│    └─yyyymmddhhMMss_Fix422_○○Table_InsertData.sql
+├─Bundle
+│  ├─Win
+│  └─Linux
+├─appsettings.json
+└─program.cs
+```
+
+``` txt
 +---------+---------+
 | Column1 | Column2 |
 +---------+---------+
